0.13.0 (In development)
------

 * Building with GHC 7.8 is no longer supported
 * Added :read Ex command
 * /<Esc> no longer resets incremental search in vim keymap

0.12.6
------

 * Building with GHC 8.0 is now supported
 * Vertical split with vty frontend
 * System clipboard support in emacs and cua keymaps

0.12.5
------

 * Remove trying to Show a function

0.12.4
------

 * Fix build with hint-0.5.1
 * Replace liftM with fmap

0.12.3
------

 * Update gtk-related dependencies
 * Make sticky eol local to buffer

0.12.2
------

 * Update QuickCheck and vty dependencies

0.12.1
------

 * Add an upper bound on vty dependency to avoid build breakage with vty>=5.4 (#776)
 * Fix build with ghc 7.10 and "-fhint" flag
 * Fix build with -f-vty
 * Fix visual block append

0.12.0
------

 * Yi can now be built with GHC 7.8 and 7.10, GHC 7.6 is no longer supported
 * hint (haskell interpreter library) dependency is now optional
 * Example configs are now checked for compilation errors by Travis CI
 * Fixed #715: yi -p opens files in reverse order and with duplicates
 * Fixed #744: Deleting text in marks (emacs mode)
 * Fixed #739: Emacs keybindings: double C-space
 * Fixed #737:
 * Fixed #741: Scroll cursor with wrapped lines
 * Fixed #738: Emacs mode, problems with selection
 * Fixed #610: Selection and search marks get confused when used together
 * Emacs keymap: M-r implementation
 * Vim keymap: :substitute now supports /i flag
 * Some refactoring and documentation fixes

0.11.2
-------

 * Clojure syntax highlighting
 * Vim operator gq (reflow text) now works
 * Vim insert keymap now includes page up/page down/end/home, and <C-w>←↑→↓ for navigating between windows.
 * CUA keymap got page up and page down too
 * New ex commands for vim keymap: :sort, :help, :undo.
   With no arguments :help displays all visible :yi commands.
   Given an argument, it displays type of this command or identifier.
 * Yi's own HLint rules are expanded.

0.11.1
-------
