@@ -1,7 +1,7 @@
 name: yi-language
 version: '0.2.1'
 synopsis: Collection of language-related Yi libraries.
-maintainer: Dmitry Ivanov <ethercrow@gmail.com>
+maintainer: Yi developers <yi-devel@googlegroups.com>
 license: GPL-2
 github: yi-editor/yi
 category: Yi
